Updated paths for images

--- a/resources/sass/elements/tables.scss
+++ b/resources/sass/elements/tables.scss
@@ -37,10 +37,10 @@ table.sortable th {
   cursor: pointer;
 }
 table.sortable tr th.tablesorter-headerAsc {
-  background: #ccc url('/images/sort_up.png') no-repeat right 50%;
+  background: #ccc url('/budgets/images/sort_up.png') no-repeat right 50%;
 }
 table.sortable tr th.tablesorter-headerDesc {
-  background: #ccc url('/images/sort_down.png') no-repeat right 50%;
+  background: #ccc url('/budgets/images/sort_down.png') no-repeat right 50%;
 }
 
 table.properties {
