--- a/resources/sass/common/note.scss
+++ b/resources/sass/common/note.scss
@@ -8,7 +8,7 @@
   min-height: 24px;
   margin: 1em 0 2em 0;
   padding-left: 40px;
-  background: url('/images/icon_comment.png') no-repeat left top;
+  background: url('/budgets/images/icon_comment.png') no-repeat left top;
 }
 
 .note-form-box {
